# rust-financial

./: .gitignore  .travis.yml  Cargo.toml  README.md
ci/: build-docs.sh  cargo-build.sh  cargo-command.sh  cargo-config.sh  cargo-doc-all.sh  cargo-lint.sh  cargo-publish-all.sh  cargo-publish.sh  deploy.sh
fin_data/: Cargo.toml  README.md
fin_data/src/: lib.rs
fin_data/src/classifiers/: mod.rs  naics.rs  uk_sic.rs  us_sic.rs
fin_data/src/markets/: mod.rs
fin_iex/: Cargo.toml  README.md
fin_iex/src/: analysis.rs  convert.rs  env.rs  lib.rs  metric.rs  news.rs  provider.rs  quote.rs  request.rs
fin_iex/src/internal/: convert.rs  env.rs  metric.rs  mod.rs  request.rs
fin_model/: Cargo.toml  README.md
fin_model/src/: analysis.rs  classification.rs  company.rs  lib.rs  market.rs  news.rs  prelude.rs  provider.rs  quote.rs  registry.rs  reporting.rs  request.rs  symbol.rs
fin_model/src/classify/: mod.rs  uk_sic.rs  us_sic.rs
fin_model/src/exchange/: exchanges.rs  mod.rs
scripts/: README.md  makeiso.sh  makemic.sh  mic2rust.py  naics2rust.py  sic2rust.py  xls2rust.py
