[package]
name = "fin_iex"
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"

[dependencies]
# Peer dependencies
fin_model = { path = "../fin_model" }
fin_data = { path = "../fin_data" }

# API dependencies
chrono = "0.4.7"
steel-cent = "0.2.2"

# Implementation dependencies
reqwest = "0.9.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
log = { version = "0.4", features = ["std"] }
metrics = "0.10.3"

# Formatting dependencies
num-format = { version = "0.4", default-features = false, features = ["with-system-locale"] }

# Command-Line dependencies
flexi_logger = { version = "^0.13.2", features = ["colors", "specfile", "ziplogs"] }
clap = { version = "~2.33" }
lazy_static = "1.3.0"
regex = "1"
