[package]
name = "fin_iex"
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "The IEX provider for financial operations."
repository = "https://github.com/johnstonskj/rust-financial.git"
readme = "README.md"
license = "MIT"
keywords = ["financial", "stock", "quote", "company"]
autobins = false

[badges]
travis-ci = {repository = "johnstonskj/rust-financial"}

[features]
iex-tool = ["flexi_logger", "clap", "num-format", "prettytable-rs", "term_size"]

[[bin]]
name = "iex-tool"
path = "src/bin/iext.rs"
required-features = ["iex-tool"]

[dependencies]
# Peer dependencies
fin_model = { path = "../fin_model" }
fin_data = { path = "../fin_data" }

# API dependencies
chrono = "0.4.7"
steel-cent = "0.2.2"

# Implementation dependencies
lazy_static = "1.3.0"
log = { version = "0.4", features = ["std"] }
metrics = "0.10.3"
regex = "1"
reqwest = "0.9.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"

# Command-Line feature dependencies
clap = { optional = true, version = "~2.33" }
flexi_logger = { optional = true, version = "^0.13.2", features = ["colors", "specfile", "ziplogs"] }
num-format = { optional = true, version = "0.4", default-features = false, features = ["with-system-locale"] }
prettytable-rs = { optional = true, version = "0.8.0" }
term_size = { optional = true, version = "0.3" }