[package]
name = "fin_model"
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]
plugin = true

[dependencies]
chrono = "0.4.7"
lazy_static = "1.3.0"
regex = "1"
steel-cent = "0.2.2"

#serde = { version = "1.0", features = ["derive"] }
