[package]
name = "fin_model"
version = "0.1.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "The provider-neutral model for financial operations."
repository = "https://github.com/johnstonskj/rust-financial.git"
readme = "README.md"
license = "MIT"
keywords = ["financial", "stock", "quote", "company"]

[badges]
travis-ci = {repository = "johnstonskj/rust-financial"}
coveralls = { repository = "rust-financial", branch = "master", service = "github" }

[lib]
crate-type = ["dylib"]
plugin = true

[dependencies]
chrono = "0.4.7"
lazy_static = "1.3.0"
regex = "1"
steel-cent = "0.2.2"
